--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="description">
       Hey, I'm Snigdha :) I am a second-year Computer Science and Mathematics double major and I'm from the suburbs of Chicago. I love all types of service, but recently I've been really passionate about cooking home-cooked meals and serving them hot for the homeless as a part of Food4Lives ATL. It allows me to make use of my skills for the better of the community and I get to physically interact with my community witnessing the different lives it holds.
     </p>
-    <a href="sganumpally6@gatech.edu" class="contact-button">Contact</a>
+    <a href="mailto:sganumpally6@gatech.edu" class="contact-button">Contact</a>
   </div>
 
 </body>
